[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enact"
version = "0.1.0"
description = "ENACT: Frame segmentation, QA generation, and evaluation framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "ENACT Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy>=1.20.0",
    "Pillow>=8.0.0",
    "tqdm>=4.60.0",
    "opencv-python>=4.5.0",
    "gdown>=4.6.0",
    "huggingface-hub>=0.16.0"
]

[project.scripts]
# Unified CLI (recommended)
enact = "scripts.enact.cli:main"
# Legacy commands (for backward compatibility)
enact-segment = "scripts.enact.run_segmentation:main"
enact-qa = "scripts.enact.run_qa_generation:main"
enact-eval = "scripts.enact.run_eval:main"

[tool.setuptools]
packages = ["enact", "enact.core", "enact.processors", "enact.utils", "scripts", "scripts.enact", "scripts.helpers"]

